# ros2-library-package-medium

./: .gitignore  README.md
try_out/: CMakeLists.txt  package.xml
try_out/include/try_out/: point_checker.hpp
try_out/src/: point_checker.cpp
try_out/test/: main.cpp  test_point_checker.cpp
try_out_utils/: CMakeLists.txt  README.md  package.xml
try_out_utils/cmake/: try_out_utils-config.cmake.in
try_out_utils/include/try_out_utils/: point.hpp
try_out_utils/src/: point.cpp
try_out_utils/test/: main.cpp  test_point.cpp
